--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,8 @@
 *.bak
-*.html~
-*.html~1~
-*.html~2~
-*.html~3~
-*.html~4~
-*.css~1~
-*.css~2~
-*.css~3~
-*.css~4~
-backups/CSSZenGarden_2014.7z
-*.md~1~
-*.html~5~
 *.marks
-*.css~5~
+*.html~
+*.html~*
+*.css~*
+backups/CSSZenGarden_2014.7z
+*.md~*
 PlainLanguage-WCAG21.md
